review on mobile menu without found issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@
   background-color: #f4f5f7;
   filter: none;
   overflow-x: hidden;
-  position: relative
+  position: relative;
 }
 
 /* .site-wrapper {
